5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1575_1332.log
== TEST (2019-03-12 22:50:02) 
-- CODE:
aresta = print(5 * 6)
area = print(3/2 * (90)**0.5)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:50:32) 
-- CODE:
aresta = print(5 * 6)
area = print(3 / 2 * 90**0.5)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:50:43) 
-- CODE:
aresta = print(5 * 6)
area = print( 90**0.5)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:50:52) 
-- CODE:
aresta = print(5 * 6)
area = print( 90**0.5)
 
print(round(, 4))
-- ERROR:
File "XXXX", line 4
    print(round(, 4))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:51:34) 
-- CODE:
aresta = print(5 * 6)
area = print(3 / 2 * 90**0.5)
 
print(round(3 / 2 * 90**0.5, 4))
-- OUTPUT:
30
14.230249470757707
14.2302
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:51:39) 
-- CODE:
aresta = print(5 * 6)
area = print(3 / 2 * 90**0.5)
 
print(round(3 / 2 * 90**0.5, 4))
-- EXECUTION TIME:
0.200395
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
30
14.230249470757707
14.2302
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:51:47) 
-- CODE:
aresta = print(5 * 6)
area = print(3 / 2 * 90**0.5)
 
print(round(3 / 2 * 90**0.5, 4))
-- OUTPUT:
30
14.230249470757707
14.2302
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:52:03) 
-- CODE:
aresta = print(30)
area = print(3 / 2 * 90**0.5)
 
print(round(3 / 2 * 90**0.5, 4))
-- OUTPUT:
30
14.230249470757707
14.2302
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:52:07) 
-- CODE:
aresta = print(30)
area = print(3 / 2 * 90**0.5)
 
print(round(3 / 2 * 90**0.5, 4))
-- EXECUTION TIME:
0.165225
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
30
14.230249470757707
14.2302
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:53:21) 
-- CODE:
aresta = print(30)
area = print(3 / 2 * 30)
 
print(round(3 / 2 * 30, 4))
-- OUTPUT:
30
45.0
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:53:25) 
-- CODE:
aresta = print(30)
area = print(3 / 2 * 30)
 
print(round(3 / 2 * 30, 4))
-- EXECUTION TIME:
0.179593
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
30
45.0
45.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:59:58) 
-- CODE:
aresta = print(5)
area = print(round(3 / 2 * 15**0.5))
 
print(round(3 / 2 * 30, 4))
-- OUTPUT:
5
6
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:00:16) 
-- CODE:
aresta = print(5)
area = print(round(3 / 2 * 15**0.5))
 
print(round(3 / 2 * 30, 4))
-- EXECUTION TIME:
0.148303
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
6
45.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:00:24) 
-- CODE:
aresta = print(5)
area = print(round(3 / 2 * 15**0.5))
 
print(round(3 / 2 * 30, 4))
-- OUTPUT:
5
6
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:00:48) 
-- CODE:
aresta = print(5)
area = print(round(3 / 2 * 15**0.5))
 
print(round(3 / 2 * 15**0.5, 4))
-- OUTPUT:
5
6
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:00:55) 
-- CODE:
aresta = print(5)
area = print(round(3 / 2 * 15**0.5))
 
print(round(3 / 2 * 15**0.5, 4))
-- EXECUTION TIME:
0.170097
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
6
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:01:09) 
-- CODE:
aresta = print(5)
area = print(3 / 2 * 15**0.5)
 
print(round(3 / 2 * 15**0.5, 4))
-- OUTPUT:
5
5.809475019311126
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:01:15) 
-- CODE:
aresta = print(5)
area = print(3 / 2 * 15**0.5)
 
print(round(3 / 2 * 15**0.5, 4))
-- EXECUTION TIME:
0.137648
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
5.809475019311126
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:01:26) 
-- CODE:
aresta = print(5)
area = print(3 / 2 * 15**0.5)
 
print(round(3 / 2 * 15**0.5, 4))
-- OUTPUT:
5
5.809475019311126
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:04:11) 
-- CODE:
aresta = print(5 * 6)
area = print(3 / 2 * 90**0.5)
 
print(round(3 / 2 * 90**0.5, 4))
-- OUTPUT:
30
14.230249470757707
14.2302
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:04:16) 
-- CODE:
aresta = print(5 * 6)
area = print(3 / 2 * 90**0.5)
 
print(round(3 / 2 * 90**0.5, 4))
-- EXECUTION TIME:
0.230798
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
30
14.230249470757707
14.2302
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:14:32) 
-- CODE:
aresta =5
area =(3 / 2) * (3**0.5)
 
print(round(3 / 2 * 90**0.5, 4))
-- OUTPUT:
14.2302
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:22:00) 
-- CODE:
aresta =5
area =print(3 / 2 * 3**0.5 * 5**2
 
print(round(3 / 2 * 3**0.5 * 5**2, 4))
-- ERROR:
File "XXXX", line 4
    print(round(3 / 2 * 3**0.5 * 5**2, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:22:30) 
-- CODE:
aresta =5
area =print(3 / 2 * 3**0.5 * 30**2
 
print(round(3 / 2 * 3**0.5 * 30**2, 4))
-- ERROR:
File "XXXX", line 4
    print(round(3 / 2 * 3**0.5 * 30**2, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:21:54) 
-- CODE:
aresta =5
area =print((3 / 2) * (3**0.5)* (aresta**2)
 
print(round( area, 4))
-- EXECUTION TIME:
0.166971
-- ERROR:
  File "/home/codebench/codes/1575/1332/main.py", line 4
    print(round( area, 4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:22:41) 
-- CODE:
aresta = 5
area =print((3 / 2) * (3**0.5)*(aresta**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.261616
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1332/main.py", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:22:54) 
-- CODE:
aresta = 5
area =((3 / 2) * (3**0.5)*(aresta**2))
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:23:04) 
-- CODE:
aresta = 5
area =((3 / 2) * (3**0.5)*(aresta**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.198812
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
